# happyimage-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COOKIE_DOMAIN_SETUP.md  COOKIE_SECURITY_REPORT.md  Dockerfile  README.md  config.example.json  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
api/: accounts.py  ai.py  app.py  auth_oidc.py  errors.py  image_conversations.py  image_inputs.py  image_tasks.py  recharge.py  seed_gallery.py  share_drafts.py  support.py  system.py
docs/: architecture.md  billing-wallet-design.md  docker-deployment.md  feature-status.en.md  gallery-curation.md  image-generation-product-research.md  newapi-gateway.md  newapi-recharge-adapter.md  project-structure.md  technical-log.md
scripts/: collect_image_gallery_seed.py  collect_prompt_gallery_candidates.py  deploy_docker.sh  docker-entrypoint.sh  export_seed_gallery_static.py  migrate_json_to_pg.py  migrate_storage.py  pregenerate_seed_gallery_thumbnails.py  test_storage.py  verify-newapi-model-chain.sh
services/: auth_service.py  backup_service.py  config.py  gallery_prompt_service.py  image_access_service.py  image_conversation_service.py  image_conversation_store.py  image_service.py  image_storage_service.py  image_task_service.py  image_task_store.py  log_service.py  model_gateway_service.py  newapi_binding_service.py  oidc_service.py  proxy_service.py  seed_gallery_service.py  share_draft_service.py  sub2api_service.py  web_session_service.py
test/: test_account_image_capabilities.py  test_chat_completion_cache.py  utils.py  (+30 more)
(+33 files in other folders)
